<resources>
    <string name="app_name">Application Contacts</string>
    <string name="title_home">Home</string>
    <string name="title_authors">Authors: Xavier NAUNAY and Kevin ABRIAL (Master 2 DSC). Welcome User, this application contacts is to use for create notifications calls</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notification_title">Don\'t forget to call:</string>
    <string name="time_placeholder">Time...</string>
    <string name="date_placeholder">Date...</string>
    <string name="contact_placeholder">Number...</string>
    <string name="channel_name">Application Contact</string>
    <string name="channel_description">Notification Contact</string>
    <string name="select">Select</string>
</resources>
