<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/toNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_placeholder"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toNumber"
        android:layout_toStartOf="@+id/btn_date"
        android:hint="@string/date_placeholder"
        android:inputType="date"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/toNumber"
        android:text="@string/select" />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/date"
        android:layout_toStartOf="@+id/btn_date"
        android:hint="@string/time_placeholder"
        android:inputType="time" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/date"
        android:text="@string/select" />

    <Button
        android:id="@+id/Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/ok" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Send"
        android:layout_centerInParent="true"
        android:width="86dip"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel" />

    <ListView
        android:id="@+id/reminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Cancel" />

</RelativeLayout>